<resources>
    <string name="app_name">Turf</string>
    <string name="near_by_turf">NearByTurf</string>
    <string name="smallTxt">"Claim Your Spot, Anytime Anywhere!"</string>
    <string name="ownerReg">Owner Turf Registration</string>
    <string name="userReg">User Registration</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signIn">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dob">DOB</string>
    <string name="mNo">Mobile No.</string>
    <string name="address">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_booking">My Booking</string>
    <string name="help_and_support">Help and\nSupport</string>
    <string name="about_us">About us</string>
    <string name="turf">All Turf</string>
    <string name="realtime_store">Store Retrieve Realtime</string>
    <string name="pay">Next</string>
</resources>