<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerRegister">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstName"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/fName"
        android:paddingStart="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.053"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastName"
        android:layout_width="169dp"
        android:layout_height="50dp"
        android:inputType="text"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/lName"
        android:paddingStart="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.053"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/email"
        android:paddingStart="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        app:layout_constraintVertical_bias="0.045"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="textVisiblePassword"
        android:background="@drawable/input_bg"
        android:hint="@string/password"
        android:paddingStart="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.056"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dob"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="date"
        android:background="@drawable/input_bg"
        android:hint="@string/dob"
        android:paddingStart="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mobileNo"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_bg"
        android:inputType="number"
        android:hint="@string/mNo"
        android:paddingStart="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dob"
        app:layout_constraintVertical_bias="0.083"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address"
        android:layout_width="378dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_bg"
        android:hint="@string/address"
        android:paddingStart="22dp"
        android:inputType="textPostalAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileNo"
        app:layout_constraintVertical_bias="0.121"
        tools:ignore="MissingConstraints,RtlSymmetry" />

    <Button
        android:id="@+id/register"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@drawable/bg_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintVertical_bias="0.623" />

</androidx.constraintlayout.widget.ConstraintLayout>