<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerRegistration">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ownerReg"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.156"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgV"
        android:layout_width="342dp"
        android:layout_height="255dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        app:layout_constraintVertical_bias="0.304"
        tools:ignore="ContentDescription,MissingConstraints" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/login"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@drawable/bg_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgV"
        app:layout_constraintVertical_bias="0.86"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/register"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@drawable/bg_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgV"
        app:layout_constraintVertical_bias="0.859"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>