<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSignIn">

    <ImageView
        android:id="@+id/imgV"
        android:layout_width="316dp"
        android:layout_height="293dp"
        android:src="@drawable/img_4"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textColor="@color/black"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937"
        tools:ignore="SpUsage" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText6"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:hint="Email"
        android:paddingStart="22dp"
        android:background="@drawable/input_bg"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textInputEditText7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.927"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText7"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:hint="Password"
        android:paddingStart="22dp"
        android:background="@drawable/input_bg"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942"
        tools:ignore="HardcodedText,RtlSymmetry" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/forgot_password"
        android:textColor="#172DF4"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="357dp"
        android:layout_height="80dp"
        android:text="@string/login"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>