<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnSignIn">

    <ImageView
        android:id="@+id/imgV"
        android:layout_width="316dp"
        android:layout_height="293dp"
        android:src="@drawable/img_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textColor="@color/black"
        android:textSize="36dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgV"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpUsage" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:background="@drawable/input_bg"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingStart="22dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.085"
        tools:ignore="HardcodedText,RtlSymmetry" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText7"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:background="@drawable/input_bg"
        android:hint="Password"
        android:inputType="textVisiblePassword"
        android:paddingStart="22dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.117"
        tools:ignore="HardcodedText,RtlSymmetry" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/forgot_password"
        android:textColor="#172DF4"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputEditText7"
        app:layout_constraintVertical_bias="0.067"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="17sp"
        android:textStyle="bold"
        android:background="@drawable/bg_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.80" />


</androidx.constraintlayout.widget.ConstraintLayout>